--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        <h1>TITULO</h1><hr>
+    </header>
     <div class="container text-center">
         <div class="row align-items-start">
           <div class="col">
-            One of three columns<br>
+            <img src="pluma.jpg" alt="">
+            <p>titulo</p>
             <div class="btn-group" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-primary">Left</button>
                 <button type="button" class="btn btn-primary">Middle</button>
