--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="pluma.jpg" alt="">
             <p>titulo</p>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary">Left</button>
+                <button type="button" class="btn btn-primary">EDIT</button>
                 <button type="button" class="btn btn-primary">Middle</button>
                 <button type="button" class="btn btn-primary">Right</button>
               </div>
