--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="album py-5 bg-light">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="cardSection">
-          <div class="col">
+          <!-- <div class="col">
             <div class="card shadow-sm">
               <img src="test1.jpg"><div class="card-body">
                 <p class="card-text">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</p>
@@ -77,12 +77,11 @@
               </div>
             </div>
           </div>
+        </div> 
+        </div> -->
         </div>
       </div>
     </div>
-  </div>
-  <button type="button" class="btn btn-secondary">Read More</button>
-</div>
 
   <footer>
 
