--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header>
     <h1>TITULO</h1>
   </header>
-  <div class="container text-center" class="container px-4 text-center"" >
-    <div class="row">
-      <div class="col">
+  <div class="container text-center">
+    <div class="row row-cols-ms3 ">
+      <div class="col .p3 m3">
         Column
       </div>
       <div class="col">
