--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 </head>
 <body>
 
-    <header class="container-fluid text-center">
-      <h1>BLOG WITH API</h1>
+    <header class="container-fluid align-items-center">
+      <nav class="navbar navbar-light bg-secondary">
+        <div class="container">
+          <h1 class="titlenav">Kimetsu No Blog</h1>
+          <a class="navbar-brand" href="#">
+            <img src="./images/kimetsulogo.jpg" alt="kimetsu" width="300">
+          </a>
+        </div>
+      </nav>
     </header>
   
-    <div class="album py-5 bg-light">
+    <div class="album py-5 bg-secondary">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="cardSection">
           
