--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900" rel="stylesheet">
     <script src="logic.js" defer></script>   
     <title>Blog with API</title>
 </head>
 <body>
 
-    <header class="container-fluid align-items-center">
-      <nav class="navbar navbar-light bg-secondary">
+    <header class="container-fluid align-items-center bg-secondary">
+      <nav class="navbar">
         <div class="container">
           <h1 class="titlenav">Kimetsu No Blog</h1>
           <a class="navbar-brand" href="#">
