--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
     <h3><b>DELETING</b></h3>
   </div>
 
+  <div class="box save hidden">
+    <span class="dot"></span>
+    <div class="loader">
+      <span style="--i:1;"></span>
+      <span style="--i:2;"></span>
+      <span style="--i:3;"></span>
+      <span style="--i:4;"></span>
+      <span style="--i:5;"></span>
+      <span style="--i:6;"></span>
+      <span style="--i:7;"></span>
+      <span style="--i:8;"></span>
+      <span style="--i:9;"></span>
+      <span style="--i:10;"></span>
+      <span style="--i:11;"></span>
+      <span style="--i:12;"></span>
+    </div>
+    <h3><b>SAVING</b></h3>
+  </div>
+
     <header class="container-fluid align-items-center bg-secondary">
       <nav class="navbar">
         <div class="container">
