--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900" rel="stylesheet">
     <script src="logic.js" defer></script>   
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Blog with API</title>
 </head>
 <body>
